--- a/index.html
+++ b/index.html
@@ -206,5 +206,25 @@
 <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 <script src="js/app.js" type="text/javascript" ></script>
 
+
+    <script>
+      function initMap() {
+        var uluru = {lat: 38.2556925, lng: -85.7512828};
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 15,
+          center: uluru
+        });
+        var marker = new google.maps.Marker({
+          position: uluru,
+          map: map
+        });
+      }
+    </script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDD-NamyNKZkHmoHKioGjcAS_MeuFze3XI&callback=initMap">
+    </script>
+  </body>
+</html>
+
 </body>
 </html>
